new script added_corrections done

--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
             <p class="close-btn">&times;</p>
             <section class="info">
                 <h3>How to play</h3>
-                <p>This is a fun little game to put you to a test of how lucky you are at guessing. Guess the number range from three different levels. Each level is with has a background colour which signify the difficulty. Player has 20 tries for each game. High score are recorded based on how score obtained. The score starts at twenty (20) and decreases per each wrong guess, till correct guess.</p>
+                <p>This is a fun little game to put you to a test of how lucky you are at guessing. Guess the number range from three different levels. Each level with its own difficulty. Player's score starts at 20 and decreases per each wrong guess. Also your score determines the number of tries you have left so try not to hit 0😊. High score are recorded at the score game was won.</p>
                 
-                <p>This is based off a tutorial lesson from Jonas Schmedtmann and not my own development. However this has been improved upon based on my ideas and logic.</p>
+                <p>This is based off a tutorial lesson from Jonas Schmedtmann and not my own ideas. However this has been improved upon based on my ideas and logic.</p>
                 </section>
         </section>
         <p class="hidden blur"></p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../script3.js"></script>
 </body>
 </html>
