refracted btn1To20

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <input type="number" class="guesses">
             <section class="left-buttons">
                 <button class="check">Check</button>
+                <!-- placed here to be made visible for smaller devices -->
                 <button class="pAgain">Play again</button>
                 <div class=" dbl-tap"></div>
             </section>
