--- a/index.html
+++ b/index.html
@@ -1,74 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guess the number</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="custom-shape-divider-top-1689986374">
-        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-            <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
-        </svg>
+      <svg
+        data-name="Layer 1"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 1200 120"
+        preserveAspectRatio="none"
+      >
+        <path
+          d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+          class="shape-fill"
+        ></path>
+      </svg>
     </div>
     <!-- the top part of the game -->
     <header id="top">
-        <section class="first-division">
-            <nav class="dropdown-container slider">
-                <p class="range">Ranges</p>
-                <div class="range-dropdown">
-                    <p id="oneToTwenty" class="between">Between 1 and 20</p>
-                    <p id="oneToFifty" class="between">Between 1 and 50</p>
-                    <p id="oneToHundred" class="between">Between 1 and 100</p>
-                </div>
-            </nav>
-            <button class="play-again">Play again</button>
-        </section>
-        
-        <section class="second-division">
-            <h1>Guess the number</h1>
-            <h2>choose game range</h2>
-            <p class="secret-number">?</p>
-        </section>
+      <section class="first-division">
+        <nav class="dropdown-container slider">
+          <p class="range">Ranges</p>
+          <div class="range-dropdown">
+            <p id="oneToTwenty" class="between">Between 1 and 20</p>
+            <p id="oneToFifty" class="between">Between 1 and 50</p>
+            <p id="oneToHundred" class="between">Between 1 and 100</p>
+          </div>
+        </nav>
+        <button class="play-again">Play again</button>
+      </section>
+
+      <section class="second-division">
+        <h1>Guess the number</h1>
+        <h2>choose game range</h2>
+        <p class="secret-number">?</p>
+      </section>
     </header>
 
     <!-- second part of the game -->
     <main class="content">
-        <section id="left" class="bottomPart">
-            <input type="number" class="guesses">
-            <section class="left-buttons">
-                <button class="check">Check</button>
-                <!-- placed here to be made visible for smaller devices -->
-                <button class="pAgain">Play again</button>
-                <div class=" dbl-tap"></div>
-            </section>
+      <section id="left" class="bottomPart">
+        <input type="number" class="guesses" />
+        <section class="left-buttons">
+          <button class="check">Check</button>
+
+          <!-- placed here to be made visible for smaller devices -->
+          <button class="pAgain">Play again</button>
+          <!-- <div class=" dbl-tap"></div> -->
         </section>
-        <section id="right" class="bottomPart">
-            <p class="message">Start guessing...</p>
-            <p class="scoreText">🔢 Score: <span class="score">0</span></p>
-            <p class="highscoreText">🎯 Highscore: <span class="highscore">0</span></p>
-        </section>
+      </section>
+      <section id="right" class="bottomPart">
+        <p class="message">Start guessing...</p>
+        <p class="scoreText">🔢 Score: <span class="score">0</span></p>
+        <p class="highscoreText">
+          🎯 Highscore: <span class="highscore">0</span>
+        </p>
+      </section>
     </main>
 
     <!-- necessary info / details -->
     <footer id="bottom">
-        <p id="JhG">&copy; 2023 :) JhayGreat :)</p>
-        <button class="game-info">Game info</button>
-        <section class="pop-up hidden">
-            <p class="close-btn">&times;</p>
-            <section class="info">
-                <h3>How to play</h3>
-                <p>This is a fun little game to put you to a test of how lucky you are at guessing. Guess the number range from three different levels. Each level with its own difficulty. Player's score starts at 20 and decreases per each wrong guess. Also your score determines the number of tries you have left so try not to hit 0😊. High score are recorded at the score game was won.</p>
+      <p id="JhG">&copy;2023 &UnderBar;greatCodes&looparrowleft;</p>
+      <button class="game-info">Game info</button>
+      <section class="pop-up hidden">
+        <p class="close-btn">&times;</p>
+        <section class="info">
+          <h3>How to play</h3>
+          <p>
+            This is a fun little game to put you to a test of how lucky you are
+            at guessing. Guess the number range from three different levels.
+            Each level with its own difficulty. Player's score starts at 20 and
+            decreases per each wrong guess. Also your score determines the
+            number of tries you have left so try not to hit 0😊. High score are
+            recorded at the score game was won.
+          </p>
 
-                <p>On small screens double click/tap on the space beneath the <em>Check</em> and <em>Play again</em> buttons to view the range menu and choose your range.</p>
-                
-                <p>This is based off a tutorial lesson from Jonas Schmedtmann and not my own ideas. However this has been improved upon based on my ideas and logic.</p>
-                </section>
+          <p>
+            On small screens double click/tap on the space beneath the
+            <em>Check</em> and <em>Play again</em> buttons to view the range
+            menu and choose your range.
+          </p>
+
+          <p>
+            The idea of this game is based off a tutorial lesson from Jonas
+            Schmedtmann and not mine. However this has been improved upon based
+            on my ideas and logic.
+          </p>
         </section>
-        <p class="hidden blur"></p>
+        <!-- game ranges / levels in pop up section -->
+        <section class="game-level_container">
+          <!-- <h3>Game levels</h3>s
+                <div class="game-levels">
+                    <button class="oneToTwenty between">Between 1 and 20</button>
+                    <button class="oneToFifty between">Between 1 and 50</button>
+                    <button class="oneToHundred between">Between 1 and 100</button>
+                </div> -->
+        </section>
+      </section>
+      <p class="hidden blur"></p>
     </footer>
 
     <script src="./currentScript.js"></script>
-</body>
+  </body>
 </html>
