minor fix on input field

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- second part of the game -->
     <main class="content">
       <section id="left" class="bottomPart">
-        <input type="number" class="guesses" />
+        <input type="number" class="guesses" placeholder="Enter a number within the range" />
         <section class="left-buttons">
           <button class="check">Check</button>
 
